--- a/bibliography.bib
+++ b/bibliography.bib
@@ -9,3 +9,27 @@
     note    = {An optional note},
     volume  = {4}
 }
+@InProceedings{LDES,
+author="Van Lancker, Dwight
+and Colpaert, Pieter
+and Delva, Harm
+and Van de Vyvere, Brecht
+and Mel{\'e}ndez, Juli{\'a}n Rojas
+and Dedecker, Ruben
+and Michiels, Philippe
+and Buyle, Raf
+and De Craene, Annelies
+and Verborgh, Ruben",
+editor="Brambilla, Marco
+and Chbeir, Richard
+and Frasincar, Flavius
+and Manolescu, Ioana",
+title="Publishing Base Registries as Linked Data Event Streams",
+booktitle="Web Engineering",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="28--36",
+abstract="Fostering interoperability, Public Sector Bodies (PSBs) maintain datasets that should become queryable as an integrated Knowledge Graph (KG). While some PSBs allow to query a part of the KG on their servers, others favor publishing data dumps allowing the querying to happen on third party servers. As the budget of a PSB to publish their dataset on the Web is finite, PSBs need guidance on what interface to offer first. A core API can be designed that covers the core tasks of Base Registries, which is a well-defined term in Flanders for the management of authoritative datasets. This core API should be the basis on which an ecosystem of data services can be built. In this paper, we introduce the concept of a Linked Data Event Stream (LDES) for datasets like air quality sensors and observations or a registry of officially registered addresses. We show that extra ecosystem requirements can be built on top of the LDES using a generic fragmenter. By using hypermedia for describing the LDES as well as the derived datasets, agents can dynamically discover their best way through the KG, and server administrators can dynamically add or remove functionality based on costs and needs. This way, we allow PSBs to prioritize API functionality based on three tiers: (i) the LDES, (ii) intermediary indexes and (iii) querying interfaces. While the ecosystem will never be feature-complete, based on the market needs, PSBs as well as market players can fill in gaps as requirements evolve.",
+isbn="978-3-030-74296-6"
+}
