--- a/bibliography.bib
+++ b/bibliography.bib
@@ -215,3 +215,10 @@ pages="277--293",
 abstract="Hundreds of public SPARQL endpoints have been deployed on the Web, forming a novel decentralised infrastructure for querying billions of structured facts from a variety of sources on a plethora of topics. But is this infrastructure mature enough to support applications? For 427 public SPARQL endpoints registered on the DataHub, we conduct various experiments to test their maturity. Regarding discoverability, we find that only one-third of endpoints make descriptive meta-data available, making it difficult to locate or learn about their content and capabilities. Regarding interoperability, we find patchy support for established SPARQL features like ORDER BY as well as (understandably) for new SPARQL 1.1 features. Regarding efficiency, we show that the performance of endpoints for generic queries can vary by up to 3--4 orders of magnitude. Regarding availability, based on a 27-month long monitoring experiment, we show that only 32.2{\%} of public endpoints can be expected to have (monthly) ``two-nines'' uptimes of 99--100{\%}.",
 isbn="978-3-642-41338-4"
 }
+@online{Nautirust,
+  author = {Arthur Vercruysse and Sitt Min Oo},
+  title = {{Nautirust} Connector architecture orchestrator },
+  year = 2022,
+  url = {https://github.com/ajuvercr/nautirust},
+  urldate = {2022-08-24}
+}
