fight abstract, round 1

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -103,6 +103,13 @@ url={https://doi.org/10.1108/07378831211213256}
   type        = "{W3C} Recommendation",
   institution = "W3C",
 }
+@TechReport {TREE,
+    author = "Pieter Colpaert",
+    title = "The TREE hypermedia specification",
+    month = july,
+    note = "https://treecg.github.io/specification/",
+    year = "2022",
+}
 @InProceedings{VoCaLS,
 author="Tommasini, Riccardo
 and Sedira, Yehia Abo
